--- a/app/src/main/res/layout/fragments_artista.xml
+++ b/app/src/main/res/layout/fragments_artista.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,5 +9,19 @@
     android:weightSum="100">
 
 
-
+    <ImageView
+        android:id="@+id/imgArtista"
+        android:layout_width="wrap_content"
+        android:layout_weight="50"
+        android:layout_height="0dp"
+        app:srcCompat="@mipmap/ic_launcher" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_weight="10"
+        android:layout_height="0dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/textView"
+        android:layout_gravity="center_horizontal"
+        android:text="Large Text"
+        />
 </LinearLayout>
