--- a/app/src/main/res/layout/fragments_artista.xml
+++ b/app/src/main/res/layout/fragments_artista.xml
@@ -14,14 +14,24 @@
         android:layout_width="wrap_content"
         android:layout_weight="50"
         android:layout_height="0dp"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:src="@drawable/abstract_1"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_weight="10"
         android:layout_height="0dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textView"
+        android:id="@+id/txtNombreArtista"
         android:layout_gravity="center_horizontal"
-        android:text="Large Text"
+        android:text="Nombre del Artista"
         />
+
+    <TextView
+        android:id="@+id/txtDescripcionArtista"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="left"
+        android:layout_weight="40"
+        android:singleLine="false"
+        android:text="Descripcion del Artista"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 </LinearLayout>
