#18 | We can get data from fragmentArtista and modify the image with private method seleccionarFotoArtista | From DisplayMusic.java in the implemented method onArtistaSelected we will call to modificarDatosArtista where we set the data

--- a/app/src/main/res/layout/fragments_artista.xml
+++ b/app/src/main/res/layout/fragments_artista.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
 
-    tools:context="com.fragmentos.seas.fragmentosysharedpreferences.fragmentos.FragmentsArtista"
+    tools:context="com.fragmentos.seas.fragmentosysharedpreferences.fragmentos.FragmentArtista"
     android:weightSum="100">
 
 
